# Snap_Lotto

./: .deployignore  .dockerignore  .gcloudignore  .gitignore  .replit  .replit-deployment  .replit-ports  .replit-run-command  .replitignore  ARCHITECTURE_ASSESSMENT.md  CLEANUP_SUMMARY.md  COUNTDOWN_TIMER_FIX.md  CSRF_API_FIXES.md  CSRF_FIX_SUMMARY.md  CSRF_SCREENSHOT_FIX.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_FIXES_APPLIED_SUMMARY.md  DEPLOYMENT_FIXES_SUMMARY.md  DEPLOYMENT_FIX_TRACKING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES.md  Dockerfile  Dockerfile.ultra-slim  ESSENTIAL_FILES_ONLY.md  EXCEL_IMPORT_INSTRUCTIONS.md  EXCEL_IMPORT_WARNING.md  EXTERNAL_LINKS_FIX.md  FINAL_DEPLOYMENT_SOLUTION.md  FINAL_DEPLOYMENT_STATUS.md  FINAL_PORT_SOLUTION.md  GEMINI_MIGRATION_COMPLETE.md  GIT_SETUP.md  HEALTH_MONITOR_SUMMARY.md  IMPORT_HISTORY_FIX.md  LOTTERY_ANALYSIS_DASHBOARD_FIXES.md  LOTTERY_ANALYSIS_FIX.md  LOTTERY_BALL_ALIGNMENT_FIX.md  LOTTERY_DATA_FIX_2538.md  LOTTERY_DATA_INTEGRITY.md  LOTTERY_TABS_FIX.md  (+753 more)
archived_scripts/: IMPORT_DATA_CSRF_FIX.md  Instructions.md  PACKAGE_REQUIREMENTS.md  PORT_CONFIGURATION.md  analyze_lottery_data.py  archive_manifest_20250503_025500.txt  check_asset_duplicates.py  check_latest_imports.py  check_screenshot_paths.py  cleanup_attached_assets.sh  cleanup_final_duplicate.py  cleanup_redundant_files.sh  compare_data.py  count_excel_data.py  create_test_extraction.py  debug_template_import.py  diagnose_db.py  direct_excel_import.py  direct_start_on_8080.py  excel_analysis.json  final_status_check.py  fix_config_urls.py  fix_daily_lotto_bonus.py  (+27 more)
(+751 files in other folders)
