[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.40",
    "psycopg2-binary>=2.9.10",
    "google-generativeai>=0.8.5",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "schedule>=1.2.2",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "flask-babel",
    "flask-limiter",
    "pyjwt",
    "oauthlib",
    "babel",
    "pydantic",
]
