[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sa-lottery-app"
version = "0.1.0"
description = "South African Lottery Intelligence Platform"
requires-python = ">=3.11"

# Dependencies now managed via requirements.txt
# All package management moved to requirements.txt for better deployment compatibility